automation/dsop/installer-connected/ring-0/aks/src/runtime/manifests/gatekeeper/k8s_objects/allow-privilege-escalation-constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sPSPAllowPrivilegeEescalation
metadata:
  name: "allowprivilegeescalation"
spec:
  match:
    kinds:
      - apiGroups: [""]
        
        kinds:
        - "Pod"
