automation/dsop/installer-connected/ring-0/aks/src/runtime/manifests/gatekeeper/k8s_objects/fsgroup-constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sPSPFSGroup
metadata:
  name: "fsgroup"
spec:
  match:
    kinds:
      - apiGroups: [""]
        
        kinds:
        - "Pod"
        
  parameters:
    rule: MayRunAs
    ranges: [{'min': 1, 'max': 1000}]
