automation/dsop/installer-connected/ring-0/aks/src/runtime/manifests/gatekeeper/k8s_objects/host-filesystem-constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sPSPHostFilesystem
metadata:
  name: "hostfilesystem"
spec:
  match:
    kinds:
      - apiGroups: [""]
        
        kinds:
        - "Pod"
        
  parameters:
    allowedHostPaths: []
