automation/dsop/installer-connected/ring-0/aks/src/runtime/manifests/gatekeeper/k8s_objects/host-network-ports-constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sPSPHostNetworkingPorts
metadata:
  name: "hostnetworkports"
spec:
  match:
    kinds:
      - apiGroups: [""]
        
        kinds:
        - "Pod"
        
  parameters:
    hostNetwork: False
    min: 1024
    max: 16345
