automation/dsop/installer-connected/ring-0/aks/src/runtime/manifests/gatekeeper/k8s_objects/privileged-containers-constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sPSPPrivilegedContainer
metadata:
  name: "privilegedcontainers"
spec:
  match:
    kinds:
      - apiGroups: [""]
        
        kinds:
        - "Pod"
