automation/dsop/installer-connected/ring-0/aks/src/runtime/manifests/gatekeeper/k8s_objects/proc-mount-constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sPSPProcMount
metadata:
  name: "procmount"
spec:
  match:
    kinds:
      - apiGroups: [""]
        
        kinds:
        - "Pod"
        
  parameters:
    : Default
