automation/dsop/installer-connected/ring-0/aks/src/runtime/manifests/gatekeeper/k8s_objects/selinux-constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sPSPSELinux
metadata:
  name: "selinux"
spec:
  match:
    kinds:
      - apiGroups: [""]
        
        kinds:
        - "Pod"
        
  parameters:
    allowedSELinuxOptions: {'level': 's0:c123,c456', 'role': 'object_r', 'type': 'svirt_sandbox_file_t', 'user': 'system_u'}
