automation/dsop/installer-connected/ring-0/aks/src/runtime/manifests/gatekeeper/k8s_objects/volumes-constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sPSPVolumeTypes
metadata:
  name: "volumes"
spec:
  match:
    kinds:
      - apiGroups: [""]
        
        kinds:
        - "Pod"
        
  parameters:
    volumes: ['*']
